--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ categories = [
   "network-programming",
   "web-programming::http-server",
 ]
+include = ["/src/htdocs/404.html", "/src/htdocs/index.html"]
 publish = false
 
 [profile.release]
