--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ categories = [
 publish = false
 
 [dependencies]
+clap = { version = "4.5.48", features = ["derive"] }
 percent-encoding = "2.3.2"
 
 [profile.release]
