--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ publish = false
 
 [dependencies]
 clap = { version = "4.5.48", features = ["derive"] }
+mime_guess = { version = "2.0.5", default-features = false }
 percent-encoding = "2.3.2"
 
 [profile.release]
